<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="plus_one,jump_button,plus_two"
        app:flow_horizontalGap="@dimen/flow_horizontal_gap_size"
        app:flow_horizontalStyle="spread_inside"
        app:flow_verticalGap="@dimen/flow_vertical_gap_size"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/show_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_one_text"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/plus_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_two_text"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="368dp" />

    <TextView
        android:id="@+id/show_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_number_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow" />

    <Button
        android:id="@+id/jump_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump_button_text"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="75dp" />


</androidx.constraintlayout.widget.ConstraintLayout>