<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.presentation.SharedViewModelActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="fragment01_button,fragment02_button,jump_button_shared_view_model"
        app:flow_horizontalGap="@dimen/shared_view_model_flow_horizontal_gap"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment01_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_fragment01_button_text"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/fragment02_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shard_fragment02_button_text"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="232dp" />

    <fragment
        android:id="@+id/fragmentContainerView"
        android:name="com.example.viewmodeldemo.ui.fragment.presentation.DemoFragment01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow2" />

    <Button
        android:id="@+id/jump_button_shared_view_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump_button_shared_view_model"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="39dp" />
</androidx.constraintlayout.widget.ConstraintLayout>